--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@covalent/text-editor": "^2.1.0",
+    "@covalent/text-editor": "git+https://github.com/Teradata/covalent-text-editor-nightly.git",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "bootstrap": "^4.4.1",
     "rxjs": "~6.4.0",
