feat: enable syntax highlight on text editor

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@highlightjs/highlight.js": "^10.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "bootstrap": "^4.4.1",
     "easymde": "^2.9.0",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "~9.0.5",
     "@angular/language-service": "~9.0.5",
     "@types/codemirror": "0.0.87",
+    "@types/highlightjs": "^9.12.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/marked": "^0.7.3",
